--- a/src/sass/module/_saira.sass
+++ b/src/sass/module/_saira.sass
@@ -13,3 +13,13 @@
   +mq($bp-md)
     font-size: 10rem
     line-height: 10rem
+
+.saira-stylistic
+  margin: 0 auto
+  max-width: 22.4rem
+
+  +mq($bp-sm)
+    max-width: 34rem
+
+  svg
+    max-width: 100%
