--- a/src/sass/utility/_svg.sass
+++ b/src/sass/utility/_svg.sass
@@ -11,5 +11,8 @@
 .u-fill-text-archivo
   fill: $color-text-archivo
 
+.u-fill-text-saira
+  fill: $color-text-saira
+
 .u-fill-primary
   fill: $primary
